--- a/mandelbulber2/msvc/mandelbulber2.vcxproj
+++ b/mandelbulber2/msvc/mandelbulber2.vcxproj
@@ -43,14 +43,14 @@
     <Keyword>Win32Proj</Keyword>
     <Platform>x64</Platform>
     <ProjectName>mandelbulber2</ProjectName>
-    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseOfMfc>false</UseOfMfc>
     <CharacterSet>MultiByte</CharacterSet>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -138,7 +138,7 @@
     </Midl>
     <Link>
       <AdditionalOptions> /machine:x64 %(AdditionalOptions)</AdditionalOptions>
-      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;comdlg32.lib;advapi32.lib;</AdditionalDependencies>
+      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;comdlg32.lib;advapi32.lib;netapi32.lib</AdditionalDependencies>
       <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>Debug</GenerateDebugInformation>
       <IgnoreSpecificDefaultLibraries>%(IgnoreSpecificDefaultLibraries)</IgnoreSpecificDefaultLibraries>
@@ -186,7 +186,7 @@
     </Midl>
     <Link>
       <AdditionalOptions> /machine:x86 %(AdditionalOptions)</AdditionalOptions>
-      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;comdlg32.lib;advapi32.lib;</AdditionalDependencies>
+      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;comdlg32.lib;advapi32.lib;netapi32.lib;</AdditionalDependencies>
       <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>Debug</GenerateDebugInformation>
       <IgnoreSpecificDefaultLibraries>%(IgnoreSpecificDefaultLibraries)</IgnoreSpecificDefaultLibraries>
@@ -234,7 +234,7 @@
     </Midl>
     <Link>
       <AdditionalOptions> /machine:arm %(AdditionalOptions)</AdditionalOptions>
-      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;comdlg32.lib;advapi32.lib;</AdditionalDependencies>
+      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;comdlg32.lib;advapi32.lib;netapi32.lib;</AdditionalDependencies>
       <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>Debug</GenerateDebugInformation>
       <IgnoreSpecificDefaultLibraries>%(IgnoreSpecificDefaultLibraries)</IgnoreSpecificDefaultLibraries>
@@ -286,7 +286,7 @@
     </Midl>
     <Link>
       <AdditionalOptions> /machine:x64 %(AdditionalOptions)</AdditionalOptions>
-      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;comdlg32.lib;advapi32.lib;</AdditionalDependencies>
+      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;comdlg32.lib;advapi32.lib;netapi32.lib;</AdditionalDependencies>
       <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>No</GenerateDebugInformation>
       <IgnoreSpecificDefaultLibraries>%(IgnoreSpecificDefaultLibraries)</IgnoreSpecificDefaultLibraries>
@@ -339,7 +339,7 @@
     </Midl>
     <Link>
       <AdditionalOptions> /machine:x64 %(AdditionalOptions)</AdditionalOptions>
-      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;comdlg32.lib;advapi32.lib;</AdditionalDependencies>
+      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;comdlg32.lib;advapi32.lib;netapi32.lib;</AdditionalDependencies>
       <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>No</GenerateDebugInformation>
       <IgnoreSpecificDefaultLibraries>%(IgnoreSpecificDefaultLibraries)</IgnoreSpecificDefaultLibraries>
@@ -387,7 +387,7 @@
     </Midl>
     <Link>
       <AdditionalOptions> /machine:x86 %(AdditionalOptions)</AdditionalOptions>
-      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;comdlg32.lib;advapi32.lib;</AdditionalDependencies>
+      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;comdlg32.lib;advapi32.lib;netapi32.lib;</AdditionalDependencies>
       <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>No</GenerateDebugInformation>
       <IgnoreSpecificDefaultLibraries>%(IgnoreSpecificDefaultLibraries)</IgnoreSpecificDefaultLibraries>
@@ -435,7 +435,7 @@
     </Midl>
     <Link>
       <AdditionalOptions> /machine:x86 %(AdditionalOptions)</AdditionalOptions>
-      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;comdlg32.lib;advapi32.lib;</AdditionalDependencies>
+      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;comdlg32.lib;advapi32.lib;netapi32.lib;</AdditionalDependencies>
       <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>No</GenerateDebugInformation>
       <IgnoreSpecificDefaultLibraries>%(IgnoreSpecificDefaultLibraries)</IgnoreSpecificDefaultLibraries>
@@ -483,7 +483,7 @@
     </Midl>
     <Link>
       <AdditionalOptions> /machine:arm %(AdditionalOptions)</AdditionalOptions>
-      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;comdlg32.lib;advapi32.lib;</AdditionalDependencies>
+      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;comdlg32.lib;advapi32.lib;netapi32.lib;</AdditionalDependencies>
       <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>No</GenerateDebugInformation>
       <IgnoreSpecificDefaultLibraries>%(IgnoreSpecificDefaultLibraries)</IgnoreSpecificDefaultLibraries>
@@ -531,7 +531,7 @@
     </Midl>
     <Link>
       <AdditionalOptions> /machine:arm %(AdditionalOptions)</AdditionalOptions>
-      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;comdlg32.lib;advapi32.lib;</AdditionalDependencies>
+      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;comdlg32.lib;advapi32.lib;netapi32.lib;</AdditionalDependencies>
       <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>No</GenerateDebugInformation>
       <IgnoreSpecificDefaultLibraries>%(IgnoreSpecificDefaultLibraries)</IgnoreSpecificDefaultLibraries>
@@ -614,8 +614,8 @@
     <CAExcludePath>$(SourceDir)build-win;$(SourceDir)packages;$(WindowsSDK_IncludePath);$(CAExcludePath)</CAExcludePath>
   </PropertyGroup>
   <ImportGroup Label="ExtensionTargets">
-    <Import Project="..\..\packages\bulbqt-msvc-x64.5.12.4.10787\build\native\bulbqt-msvc-x64.targets" Condition="Exists('..\..\packages\bulbqt-msvc-x64.5.12.4.10787\build\native\bulbqt-msvc-x64.targets')" />
-    <Import Project="..\..\packages\bulbqt-msvc-x86.5.12.4.10787\build\native\bulbqt-msvc-x86.targets" Condition="Exists('..\..\packages\bulbqt-msvc-x86.5.12.4.10787\build\native\bulbqt-msvc-x86.targets')" />
+    <Import Project="..\..\packages\bulbqt-msvc-x64.5.15.2.10889\build\native\bulbqt-msvc-x64.targets" Condition="Exists('..\..\packages\bulbqt-msvc-x64.5.15.2.10889\build\native\bulbqt-msvc-x64.targets')" />
+    <Import Project="..\..\packages\bulbqt-msvc-x86.5.15.2.10889\build\native\bulbqt-msvc-x86.targets" Condition="Exists('..\..\packages\bulbqt-msvc-x86.5.15.2.10889\build\native\bulbqt-msvc-x86.targets')" />
     <Import Project="..\..\packages\flac-msvc-x64.1.3.2.8787\build\native\flac-msvc-x64.targets" Condition="Exists('..\..\packages\flac-msvc-x64.1.3.2.8787\build\native\flac-msvc-x64.targets')" />
     <Import Project="..\..\packages\flac-msvc-x86.1.3.2.8787\build\native\flac-msvc-x86.targets" Condition="Exists('..\..\packages\flac-msvc-x86.1.3.2.8787\build\native\flac-msvc-x86.targets')" />
     <Import Project="..\..\packages\gsl-msvc-x64.2.4.0.8788\build\native\gsl-msvc-x64.targets" Condition="Exists('..\..\packages\gsl-msvc-x64.2.4.0.8788\build\native\gsl-msvc-x64.targets')" />
@@ -625,8 +625,8 @@
     <Import Project="..\..\packages\libjpeg-msvc-x86.9.1.0.8807\build\native\libjpeg-msvc-x86.targets" Condition="Exists('..\..\packages\libjpeg-msvc-x86.9.1.0.8807\build\native\libjpeg-msvc-x86.targets')" />
     <Import Project="..\..\packages\libpng-msvc-x64.1.6.33.8807\build\native\libpng-msvc-x64.targets" Condition="Exists('..\..\packages\libpng-msvc-x64.1.6.33.8807\build\native\libpng-msvc-x64.targets')" />
     <Import Project="..\..\packages\libpng-msvc-x86.1.6.33.8807\build\native\libpng-msvc-x86.targets" Condition="Exists('..\..\packages\libpng-msvc-x86.1.6.33.8807\build\native\libpng-msvc-x86.targets')" />
-    <Import Project="..\..\packages\libsndfile-msvc-x64.1.0.27.9902\build\native\libsndfile-msvc-x64.targets" Condition="Exists('..\..\packages\libsndfile-msvc-x64.1.0.27.9902\build\native\libsndfile-msvc-x64.targets')" />
-    <Import Project="..\..\packages\libsndfile-msvc-x86.1.0.27.9902\build\native\libsndfile-msvc-x86.targets" Condition="Exists('..\..\packages\libsndfile-msvc-x86.1.0.27.9902\build\native\libsndfile-msvc-x86.targets')" />
+    <Import Project="..\..\packages\libsndfile-msvc-x64.1.0.27.9910\build\native\libsndfile-msvc-x64.targets" Condition="Exists('..\..\packages\libsndfile-msvc-x64.1.0.27.9910\build\native\libsndfile-msvc-x64.targets')" />
+    <Import Project="..\..\packages\libsndfile-msvc-x86.1.0.27.9910\build\native\libsndfile-msvc-x86.targets" Condition="Exists('..\..\packages\libsndfile-msvc-x86.1.0.27.9910\build\native\libsndfile-msvc-x86.targets')" />
     <Import Project="..\..\packages\libtiff-msvc-x64.4.0.7.8808\build\native\libtiff-msvc-x64.targets" Condition="Exists('..\..\packages\libtiff-msvc-x64.4.0.7.8808\build\native\libtiff-msvc-x64.targets')" />
     <Import Project="..\..\packages\libtiff-msvc-x86.4.0.7.8808\build\native\libtiff-msvc-x86.targets" Condition="Exists('..\..\packages\libtiff-msvc-x86.4.0.7.8808\build\native\libtiff-msvc-x86.targets')" />
     <Import Project="..\..\packages\lzo-msvc-x64.2.10.0.8807\build\native\lzo-msvc-x64.targets" Condition="Exists('..\..\packages\lzo-msvc-x64.2.10.0.8807\build\native\lzo-msvc-x64.targets')" />
@@ -646,8 +646,8 @@
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\..\packages\bulbqt-msvc-x64.5.12.4.10787\build\native\bulbqt-msvc-x64.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\bulbqt-msvc-x64.5.12.4.10787\build\native\bulbqt-msvc-x64.targets'))" />
-    <Error Condition="!Exists('..\..\packages\bulbqt-msvc-x86.5.12.4.10787\build\native\bulbqt-msvc-x86.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\bulbqt-msvc-x86.5.12.4.10787\build\native\bulbqt-msvc-x86.targets'))" />
+    <Error Condition="!Exists('..\..\packages\bulbqt-msvc-x64.5.15.2.10889\build\native\bulbqt-msvc-x64.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\bulbqt-msvc-x64.5.15.2.10889\build\native\bulbqt-msvc-x64.targets'))" />
+    <Error Condition="!Exists('..\..\packages\bulbqt-msvc-x86.5.15.2.10889\build\native\bulbqt-msvc-x86.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\bulbqt-msvc-x86.5.15.2.10889\build\native\bulbqt-msvc-x86.targets'))" />
     <Error Condition="!Exists('..\..\packages\flac-msvc-x64.1.3.2.8787\build\native\flac-msvc-x64.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\flac-msvc-x64.1.3.2.8787\build\native\flac-msvc-x64.targets'))" />
     <Error Condition="!Exists('..\..\packages\flac-msvc-x86.1.3.2.8787\build\native\flac-msvc-x86.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\flac-msvc-x86.1.3.2.8787\build\native\flac-msvc-x86.targets'))" />
     <Error Condition="!Exists('..\..\packages\gsl-msvc-x64.2.4.0.8788\build\native\gsl-msvc-x64.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\gsl-msvc-x64.2.4.0.8788\build\native\gsl-msvc-x64.targets'))" />
@@ -657,8 +657,8 @@
     <Error Condition="!Exists('..\..\packages\libjpeg-msvc-x86.9.1.0.8807\build\native\libjpeg-msvc-x86.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\libjpeg-msvc-x86.9.1.0.8807\build\native\libjpeg-msvc-x86.targets'))" />
     <Error Condition="!Exists('..\..\packages\libpng-msvc-x64.1.6.33.8807\build\native\libpng-msvc-x64.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\libpng-msvc-x64.1.6.33.8807\build\native\libpng-msvc-x64.targets'))" />
     <Error Condition="!Exists('..\..\packages\libpng-msvc-x86.1.6.33.8807\build\native\libpng-msvc-x86.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\libpng-msvc-x86.1.6.33.8807\build\native\libpng-msvc-x86.targets'))" />
-    <Error Condition="!Exists('..\..\packages\libsndfile-msvc-x64.1.0.27.9902\build\native\libsndfile-msvc-x64.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\libsndfile-msvc-x64.1.0.27.9902\build\native\libsndfile-msvc-x64.targets'))" />
-    <Error Condition="!Exists('..\..\packages\libsndfile-msvc-x86.1.0.27.9902\build\native\libsndfile-msvc-x86.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\libsndfile-msvc-x86.1.0.27.9902\build\native\libsndfile-msvc-x86.targets'))" />
+    <Error Condition="!Exists('..\..\packages\libsndfile-msvc-x64.1.0.27.9910\build\native\libsndfile-msvc-x64.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\libsndfile-msvc-x64.1.0.27.9910\build\native\libsndfile-msvc-x64.targets'))" />
+    <Error Condition="!Exists('..\..\packages\libsndfile-msvc-x86.1.0.27.9910\build\native\libsndfile-msvc-x86.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\libsndfile-msvc-x86.1.0.27.9910\build\native\libsndfile-msvc-x86.targets'))" />
     <Error Condition="!Exists('..\..\packages\libtiff-msvc-x64.4.0.7.8808\build\native\libtiff-msvc-x64.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\libtiff-msvc-x64.4.0.7.8808\build\native\libtiff-msvc-x64.targets'))" />
     <Error Condition="!Exists('..\..\packages\libtiff-msvc-x86.4.0.7.8808\build\native\libtiff-msvc-x86.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\libtiff-msvc-x86.4.0.7.8808\build\native\libtiff-msvc-x86.targets'))" />
     <Error Condition="!Exists('..\..\packages\lzo-msvc-x64.2.10.0.8807\build\native\lzo-msvc-x64.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\lzo-msvc-x64.2.10.0.8807\build\native\lzo-msvc-x64.targets'))" />
