Missing coma in mandelbulber2.rc

--- a/mandelbulber2/msvc/mandelbulber2.rc
+++ b/mandelbulber2/msvc/mandelbulber2.rc
@@ -56,7 +56,7 @@ LANGUAGE LANG_ENGLISH,
 		//
 
 		VS_VERSION_INFO VERSIONINFO FILEVERSION 2,
-	30, 0, 0 PRODUCTVERSION 2, 31 0,
+	30, 0, 0 PRODUCTVERSION 2, 31, 0,
 	0 FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
 	FILEFLAGS 0x1L
