--- a/mandelbulber2/deploy/linux/mandelbulber2.desktop
+++ b/mandelbulber2/deploy/linux/mandelbulber2.desktop
@@ -3,7 +3,7 @@ Categories=Graphics;3DGraphics;Math;Science;
 Comment=Visit 3D Fractal World
 Exec=mandelbulber2
 GenericName=Mandelbulber v2 - Advanced 3D fractal generator
-Icon=mandelbulber
+Icon=mandelbulber2
 Name=Mandelbulber v2
 StartupNotify=true
 Terminal=false
