--- a/mandelbulber2/msvc/mandelbulber2_autogen.vcxproj
+++ b/mandelbulber2/msvc/mandelbulber2_autogen.vcxproj
@@ -353,6 +353,7 @@
     <Exec Command="xcopy /Y /Q &quot;$(QtDir)\bin\Qt5Svg.dll&quot; &quot;$(OutDir)&quot;" />
     <Exec Command="xcopy /Y /Q &quot;$(QtDir)\bin\Qt5Test.dll&quot; &quot;$(OutDir)&quot;" />
     <Exec Command="xcopy /Y /Q &quot;$(QtDir)\bin\Qt5Widgets.dll&quot; &quot;$(OutDir)&quot;" />
+    <Exec Command="xcopy /Y /Q &quot;$(QtDir)\bin\Qt5Qml.dll&quot; &quot;$(OutDir)&quot;" />
   </Target>
   <Target Name="Copy-QTLIBS-Debug" AfterTargets="Build-Package" Condition="( $(Configuration.ToLower().IndexOf('debug')) &gt; -1 ) ">
     <Exec Command="xcopy /Y /Q &quot;$(QtDir)\bin\Qt5Cored.dll&quot; &quot;$(OutDir)&quot;" />
@@ -365,5 +366,6 @@
     <Exec Command="xcopy /Y /Q &quot;$(QtDir)\bin\Qt5Svgd.dll&quot; &quot;$(OutDir)&quot;" />
     <Exec Command="xcopy /Y /Q &quot;$(QtDir)\bin\Qt5Testd.dll&quot; &quot;$(OutDir)&quot;" />
     <Exec Command="xcopy /Y /Q &quot;$(QtDir)\bin\Qt5Widgetsd.dll&quot; &quot;$(OutDir)&quot;" />
+    <Exec Command="xcopy /Y /Q &quot;$(QtDir)\bin\Qt5Qmld.dll&quot; &quot;$(OutDir)&quot;" />
   </Target>
 </Project>
