--- a/mandelbulber2/msvc/mandelbulber2.rc
+++ b/mandelbulber2/msvc/mandelbulber2.rc
@@ -64,10 +64,10 @@ LANGUAGE LANG_ENGLISH,
 	FILEFLAGS 0x0L
 #endif
 	FILEOS 0x40004L FILETYPE 0x1L FILESUBTYPE 0x0L BEGIN BLOCK "StringFileInfo" BEGIN BLOCK
-																														 "040904b0" BEGIN VALUE "CompanyName",
+	"040904b0" BEGIN VALUE "CompanyName",
 	"Mandelbulber Team" VALUE "FileDescription",
 	"Mandelbulber generates three-dimensional fractals." VALUE "FileVersion",
-	"2.32-dev VALUE "InternalName", "mandelbulber2.exe" VALUE "LegalCopyright",
+	"2.32-dev" VALUE "InternalName", "mandelbulber2.exe" VALUE "LegalCopyright",
 	"Copyright (C) 2024 Mandelbulber Team" VALUE "OriginalFilename",
 	"mandelbulber2.exe" VALUE "ProductName", "Mandelbulber" VALUE "ProductVersion",
 	"2.32-dev" END END BLOCK "VarFileInfo" BEGIN VALUE "Translation", 0x409, 1200 END END
