Added missing binary files were excluded in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -19,14 +19,11 @@ mandelbulber2/msvc/*.aps
 *.opensdf
 *.sdf
 *.suo
-/Debug
-/Release
 packages/
 .vs
 mandelbulber2.dir
 mandelbulber2.VC.db
 mandelbulber2.VC.VC.opendb
-x64/
 *.vcxproj.filters
 
 # VSCode
@@ -51,7 +48,7 @@ x64/
 # Compiled Dynamic libraries
 *.so
 *.dylib
-*.dll
+# *.dll
 
 # Fortran module files
 *.mod
@@ -60,7 +57,7 @@ x64/
 *.lai
 *.la
 *.a
-*.lib
+# *.lib
 
 # Executables
 *.exe
